# django-multi-auth-token

./: LICENSE  MANIFEST.in  README.rst  setup.cfg
multi_auth_token/: admin.py  apps.py  authentication.py  models.py
multi_auth_token/migrations/: 0001_initial.py  0002_alter_token_created.py
